--- a/src/style.css
+++ b/src/style.css
@@ -161,6 +161,7 @@ aside>ul>ul {
     display: flex;
     flex-direction: column;
     padding-top: 1rem;
+    padding-bottom: 2rem;
     align-items: center;
     flex-basis: 80%;
 }
